# approximate_ecc

./: .gitignore  .~lock.advisor_slides.pptx#  CLAUDE.md  CMakeLists.txt  README.md  ROADMAP.md  __init__.py  advisor_slides.pptx  bch_parity_comparison.py  bitflip_solver.py  build.sh  demo.py  feistel_perm.py  fig1_headline.py  fig1_performance.py  fig2_overhead_comparison.py  fig2_replot.py  fig2_success_rate.py  fig3_feistel_map.py  fig3_scalability.py  fig4_burst_resilience.py  fig5_adaptive_grouping.py  fig5_nn_weight_protection.py  fig6_ber_bitlength.py  fig_bch_burst.py  fig_burst_vs_rs.py  fig_crossover.py  fig_mb_comparison.py  fig_overhead_zones.py  fig_rs_empirical.py  fig_sdc.py  figure_a_shuffle.py  figure_b_stress_test.py  figure_c_ber.py  figure_d_overhead.py  figure_e_burst.py  figure_f_scalability.py  figure_g_feistel.py  figure_h_top_n_hashes.py  grid_shuffle.py  (+6 more)
.cursor/plans/: feistel-shuffle-and-correction-experiments-82b04d57.plan.md
IDF/CRISP_IDF/: main.tex  references.bib
IDF_Template__Nelms_/: main.tex  references.bib
IDF_Template__Nelms_/sections/: abstract.tex  algorithm.tex  assumptions.tex  claims.tex  desc_of_tech.tex  problem.tex  solution.tex  system_design.tex  terminologies.tex  title_page.tex  use_cases.tex
cpp/include/: bitflip_solver.hpp  feistel_perm.hpp  grid_shuffle.hpp  group_hash.hpp  hash_dag.hpp
cpp/src/: bindings.cpp  bitflip_solver.cpp  feistel_perm.cpp  grid_shuffle.cpp  group_hash.cpp  hash_dag.cpp
experiments/: __init__.py  common.py  ecc_comparison.py  trial_runner.py
patent/nonprovisional/: 02_specification.md  (+4 more)
(+31 files in other folders)
